# claude2codexByCRS

./: .env  pyproject.toml
src/claude_crs_proxy/: config.py  main.py  schemas.py
src/claude_crs_proxy/routes/: messages.py
src/claude_crs_proxy/services/: auth.py  converter.py  crs_client.py  field_mapper.py  model_routing.py  streaming.py
